# PROG2400-700-Lectures

./: CMakeLists.txt  README.md  echo.cpp  main
best_practices/: main.cpp  student.cpp  student.h
binary_search_tree/: main.cpp
bubble_sort/: main.cpp
command_line/: main.cpp
commands/: main.cpp
dynamic_arrays/: DynamicArray.cpp  DynamicArray.h  main.cpp
factorial/: main.cpp
insertion_sort/: main.cpp
linked_lists/: main.cpp
list_folders/: main.cpp
merge_sort/: main.cpp
palindrome/: main.cpp
queues/: main.cpp
quick_sort/: main.cpp
recursion/: main.cpp
selection_sort/: main.cpp
shell_sort/: main.cpp
smart_ptr/: main.cpp
stacks/: main.cpp
